feat: implement pagination and sorting for borrow slips; update BorrowSlipController, BorrowSlipService, and BorrowSlipRepository to support paginated responses